// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tab> Renders correctly 1`] = `
.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #000;
  height: 30px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 250px;
  border-radius: 3px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 10px;
  background-color: #fff;
  box-sizing: border-box;
  opacity: 0.4;
}

.c0:not(:first-child) {
  margin-left: 2px;
}

.c1 {
  height: 30px;
  width: 30px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 20px;
  font-weight: bold;
  padding-left: 5px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: uppercase;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c2 {
  height: 30px;
  width: 16px;
  margin: 0 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  width: 16px;
  height: 16px;
  background-color: #fc0;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    A
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    />
  </div>
  <div
    className="c4"
  >
    Name
  </div>
</div>
`;

exports[`<Tab> Renders correctly 2`] = `
.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #000;
  height: 30px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 250px;
  border-radius: 3px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 10px;
  background-color: #fff;
  box-sizing: border-box;
  opacity: 1;
}

.c0:not(:first-child) {
  margin-left: 2px;
}

.c1 {
  height: 30px;
  width: 30px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 20px;
  font-weight: bold;
  padding-left: 5px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: uppercase;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c2 {
  height: 30px;
  width: 16px;
  margin: 0 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  width: 16px;
  height: 16px;
  background-color: #fc0;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    A
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    />
  </div>
  <div
    className="c4"
  >
    Name
  </div>
</div>
`;
